04-databases-modificadas.yaml
---
#Keycloak PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: orthanc-santiago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - name: postgres
        image: postgres:14
        # 1. Indicamos a Postgres que no intente un chmod en la raíz compartida
        args: ["-c", "data_directory=/var/lib/postgresql/data/pgdata"]
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: keycloak-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: orthanc-santiago
spec:
  type: ClusterIP
  selector:
    app: keycloak-db
  ports:
  - port: 5432
    targetPort: 5432
