04-databases2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: orthanc-santiago
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - name: postgres
        image: postgres:14
        args: ["-c", "data_directory=/var/lib/postgresql/data/pgdata"]
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        readinessProbe:
          exec:
            command: ["pg_isready","-U","keycloak"]
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:  ["pg_isready", "-U", "keycloak"]
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: keycloak-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: orthanc-santiago
spec:
  type: ClusterIP
  selector:
    app: keycloak-db
  ports:
  - port: 5432
    targetPort: 5432
