06-ohif.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ohif
  namespace: orthanc-santiago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ohif
  template:
    metadata:
      labels:
        app: ohif
    spec:
      containers:
      - name: ohif
        image: orthancteam/ohif-v3:25.12.0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ohif
  namespace: orthanc-santiago
spec:
  type: ClusterIP
  selector:
    app: ohif
  ports:
  - port: 80
    targetPort: 80
