08-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-auth-service
  namespace: orthanc-santiago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc-auth-service
  template:
    metadata:
      labels:
        app: orthanc-auth-service
    spec:
      containers:
      - name: orthanc-auth-service
        image: orthancteam/orthanc-auth-service:main
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: permissions
          mountPath: /orthanc_auth_service/permissions.json
          subPath: permissions.json
      volumes:
      - name: permissions
        configMap:
          name: orthanc-auth-permissions
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-auth-service
  namespace: orthanc-santiago
spec:
  type: ClusterIP
  selector:
    app: orthanc-auth-service
  ports:
  - port: 8000
    targetPort: 8000
