09-ingress.yaml
# /orthanc ->  orthanc-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc-main-ingress
  namespace: orthanc-santiago
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: tfm-sch.imaging.i3m.upv.es
    http:
      paths:
      - path: /orthanc(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orthanc-service
            port:
              number: 8042

---
# /keycloak ->  keycloak
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: orthanc-santiago
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
  - host: tfm-sch.imaging.i3m.upv.es
    http:
      paths:
      - path: /keycloak(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8080

---
#/ohif y /dicom-web-> sin rewrite
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc-add-ingress
  namespace: orthanc-santiago
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: tfm-sch.imaging.i3m.upv.es
    http:
      paths:
      - path: /ohif
        pathType: ImplementationSpecific
        backend:
          service:
            name: ohif
            port:
              number: 80
      - path: /dicom-web
        pathType: ImplementationSpecific
        backend:
          service:
            name: orthanc-service
            port:
              number: 8042
